--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,7 @@ jobs:
           outputs: |
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg
+          palette: "github-dark"  # uses GitHub's dark theme colors
 
       - name: Push to output branch
         uses: crazy-max/ghaction-github-pages@v4
