--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,8 @@ jobs:
           outputs: |
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg
-          palette: "github-dark"  # uses GitHub's dark theme colors
+          palette: >
+            #39d353, #26a641, #006d32, #003820, #0d1117
 
       - name: Push to output branch
         uses: crazy-max/ghaction-github-pages@v4
