--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg
           palette: >
-            #39d353, #26a641, #006d32, #003820, #0d1117
+            #39d353, #26a641, #006d32, #003820, #0d1117  # <- last color is background!
 
       - name: Push to output branch
         uses: crazy-max/ghaction-github-pages@v4
